tests/NormalTests/paczka1/small_fuzzy/69472077.err
Error in line 4: FTwyFmBa0T A754 96,4
Error in line 2: YEfhRS S708 83,3
Error in line 10: YEfhRS S891 75,2
